--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^5.0.5",
     "react-image-crop": "^11.0.5",
     "yarn": "^1.22.21"
   },
