--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
     "add": "^2.0.6",
+    "axios": "^1.6.7",
     "html-to-image": "^1.11.11",
     "next": "14.1.0",
     "react": "^18",
