--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
+    "@vercel/blob": "^0.21.0",
     "add": "^2.0.6",
     "axios": "^1.6.7",
     "html-to-image": "^1.11.11",
+    "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.5",
     "react-image-crop": "^11.0.5",
+    "vercel": "^33.5.0",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
