--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
+    "@types/react-avatar-editor": "^13.0.2",
     "@vercel/blob": "^0.21.0",
     "add": "^2.0.6",
     "axios": "^1.6.7",
@@ -17,6 +18,7 @@
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.5",
